Added remaining website files and basic structure/content for website

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=h1, initial-scale=1.0">
+    <title>Album website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&family=Overpass+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="albumInfo"></div>
+    <h1 class="title"> King Krule - Six feet beneath the moon </h1>
     
+        <img src="https://m.media-amazon.com/images/I/91W8P+QtMIL._SL1500_.jpg"  >
+        <p class="album-info">something about an Album</p>
+    </div>
+
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
